# PyTypeFx

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  main.py  pyproject.toml  setup.py
TypeFx/: __init__.py  cli.py  colors.py  constant.py  decorator.py  effects.py  utility.py  writers.py
docs/: api.md  changelog.md  colors.md  examples.md  guide.md  index.md  styles.md  writers.md
tests/: conftest.py  test_banners.py  test_colors.py  test_decorator.py  test_effects.py  test_styles.py  test_utility.py  test_writers.py
typefx/: __init__.py  _types.py  banners.py  cli.py  colors.py  constant.py  decorator.py  effects.py  styles.py  utility.py  writers.py
