[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "PyTypeFx"
version = "2.1.1"
description = "Terminal text effects, ASCII art banners, and mascot displays — zero dependencies."
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
authors = [
    {name = "RK RIAD KHAN", email = "rkriad585@gmail.com"},
]
dependencies = [
    "typing_extensions; python_version < '3.8'",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
Homepage = "https://github.com/rkriad585/PyTypeFx"
Source = "https://github.com/rkriad585/PyTypeFx"

[project.scripts]
typefx = "typefx.cli:main"

[tool.setuptools.packages.find]
include = ["typefx*"]
